test/errhandling/psahabu/no-prop-implicit.good
calling noPropError
should not propagate
no-prop-implicit.chpl:5: error: uncaught error
